2006-07-21  Andreas Kupries <andreask@activestate.com>

	* send.man:      Renamed to term_send.man, to avoid
	* term_send.man: clashing with Tk's 'send' manpage.

2006-07-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ansi_cattr.man: More documentation.
	* ansi_cctrl.man:
	* ansi_cmacros.man:
	* ansi_code.man:
	* ansi_send.man: Tweaked
	* ansi/code/ctrl.tcl: Fixed argument bug
	* ansi/code/macros.tcl: Fixed argument bug.

2006-07-18  Andreas Kupries  <andreask@activestate.com>

	* term.man: Added some documentation.
	* send.man: 
	* ansi_send.man: 

2006-07-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	
	* New module "term". Terminal control.